--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,16 +1,43 @@
-<div class="section-wrapper">
-    <section class="section about" id="about">
-        <div id="about-text">
-            <div class="section-heading">About</div>
-            <p class="paragraph-text justify-text">
-                Perkenalkan nama saya Muhammad Sayuti biasa dipanggil sayutii, saya berasal dari Provinsi Aceh tepat nya di Aceh Utara, lahir di Desa Teupin keubeu pada tanggal 30 Maret 2000, anak terakhir dari 4 bersaudara. Menempuh pendidikan di provinsi Aceh selama 12 tahun di mulai dari SD Negeri 8 Matangkuli dan berlanjut ke SMP Negeri 1 Matangkuli, dan berlanjut ke Sekolah Menengah Pertama (SMA) yaitu pada SMK Negeri 1 Matangkuli. 
-            </p>
-            <p class="paragraph-text justify-text">
-                Dan sekarang saya adalah seorang mahasiswa dari Politeknik Aceh dengan program studi Teknologi Informasi.
-            </p>
-            <p class="paragraph-text justify-text">
-                Setiap orang memiliki tujuan dan rencana masa depan yang baik, segala proses akan dilalui dari pengalaman dan kesempatan yang didapatkan, baik dan buruknya tergantung dari sikap dan cara kita menghadapi nya, masa depan saya adalah menjadi seorang ahli di bidang saya, dan menjadi orang yang bermanfaat serta berguna di lingkungan sekitar serta menjadi contoh baik kepada orang lain.
-            </p>
+<!-- ======= About Section ======= -->
+  <section id="about" class="about">
+
+    <!-- ======= About Me ======= -->
+    <div class="about-me container">
+
+      <div class="section-title">
+        <h2>Tentang</h2>
+        <p>Hidup Saya</p>
+      </div>
+
+      <div class="row">
+        <div class="col-lg-4" data-aos="fade-right">
+          <img src="assets/img/me.jpg" class="img-fluid" alt="">
         </div>
-    </section>
-</div>
+        <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
+          <h3>Gamer</h3>
+          <p class="font-italic"></p>
+
+          <div class="row">
+            <div class="col-lg-8">
+              <ul>
+                <li><i class="icofont-rounded-right"></i> <strong>Nama Lengkap :</strong> Hasanul Fitri</li></strong>
+                <li><i class="icofont-rounded-right"></i> <strong>Alias        :</strong> CingYt</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Tanggal Lahir:</strong> 29 November 2000</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Alamat       :</strong> Indonesia, Aceh, Lampeneurut UB</li> 
+                <li><i class="icofont-rounded-right"></i> <strong>Agama        :</strong> Islam</li> 
+                <li><i class="icofont-rounded-right"></i> <strong>Pekerjaan    :</strong> Mahasiswa</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Status       :</strong> Masih Single</li>
+              </ul>
+            </div>
+          
+          <p>
+            Ini adalah biografi hidup saya, Nama Lengkap saya Hasanul Fitri, banyak teman sekitar saya memanggil saya dengan sebutan CingYt, 
+            saya berasal dari Kota Aceh Besar tepatnya dari daerah Lampeneurut Ujong Blang, Saya anak kedua dari dua bersodara, Saya lahir pada
+            tanggal 29 November 2000 di Aceh Besar, Pekerjaan sekarang ialah saya masih Mahasiswa aktif di salah universitas swasta ternama yaitu 
+            Politeknik Aceh.
+
+          </p>
+        </div>
+      </div>
+
+    </div><!-- End About Me -->
