--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,16 +1,29 @@
+<!-- ======= Header ======= -->
+  <header id="header" class="header-tops">
+    <div class="container">
 
-<section class="head" id="nav">
-    <div class="head-inner-wrap">
-        <div class="profile-pic-div animated">
-            <a href="#about" class="profile-pic-link"><img src="{{ site.profile_picture }}" class="profile-pic"/></a>
-        </div>
-        <div class="head-name head-title animated" id="head-name">{{ site.title }}</div>
-        <div class="head-punchline animated">{{ site.description }}</div>
-        <div class="head-menu-wrap">
-            <a class="semi-transparent-button with-border nav-links" href="#about">ABOUT</a>
-            <a class="semi-transparent-button with-border nav-links" href="#skills">SKILLS</a>
-            <a class="semi-transparent-button with-border nav-links" href="#projects">EDUCATION</a>
-       
-        </div>
+      <h1><a href="index.html">CV CingYt</a></h1>
+      <!-- Uncomment below if you prefer to use an image logo -->
+      <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
+      <h2>I'm a Human Professional, <span>I Believe To Allah,</span> I am from Lampeneurut</h2>
+
+      <nav class="nav-menu d-none d-lg-block">
+        <ul>
+          <li class="active"><a href="#header">Home</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#resume">Resume</a></li>
+          <li><a href="#contact">Contact</a></li>
+          <li><a href="https://cingtq-1.hasanulfitri27.repl.co/">Replit.com</a></li>
+          <li><a href="https://cingzy.wordpress.com/">Wordpress</a></li>
+        </ul>
+      </nav><!-- .nav-menu -->
+
+      <div class="social-links">
+        
+        <a href="https://m.facebook.com/hasanulf1"><i class="icofont-facebook"></i></a>
+        <a href="https://www.instagram.com/hasanulfitriasyek/"><i class="icofont-instagram"></i></a>
+        
+      </div>
+
     </div>
-</section>
+  </header><!-- End Header -->
