--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,18 +6,11 @@
 <body>
 
     {% include nav.html %}
+      {% include about.html %}
+      {% include home.html %}
+      {% include resume.html %}
+      {% include kontak.html %}
 
-    {% include about.html %}
-
-    {% include skills.html %}
-
-    {% include projects.html %}
-
-    {% include blogs.html %}
-        
-    {% include extra.html %}
-
-    {% include footer.html %}
 
     {% include scripts.html %}
 </body>
