--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -17,5 +17,5 @@
   <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
   <script src="assets/vendor/venobox/venobox.min.js"></script>
 
-  <!-- Template Main JS File -->
+  <!-- yTemplate Main JS File -->
   <script src="assets/js/main.js"></script>
