--- a/_includes/resume.html
+++ b/_includes/resume.html
@@ -1,4 +1,4 @@
- <!-- ======= Resume Section ======= -->
+ <!-- ======== Resume Section ======= -->
   <section id="resume" class="resume">
     <div class="container">
 
