--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,4 +1,4 @@
-<!-- ======= About Section ======= -->
+<!-- ======= Aboutg Section ======= -->
   <section id="about" class="about">
 
     <!-- ======= About Me ======= -->
