--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,6 +21,6 @@
   <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
   <link href="assets/vendor/venobox/venobox.css" rel="stylesheet">
 
-  <!-- Template Main CSS File -->
+  <!-- Template Main CSS Figle -->
   <link href="assets/css/style.css" rel="stylesheet">
 </head>
