--- a/_includes/home.html
+++ b/_includes/home.html
@@ -3,7 +3,7 @@
     <div class="container">
 
       <h1><a href="index.html">CV CingYt</a></h1>
-      <!-- Uncomment below if you prefer to use an image logo -->
+      <!-- Uncomment belogw if you prefer to use an image logo -->
       <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
       <h2>I'm a Human Professional, <span>I Believe To Allah,</span> I am from Lampeneurut</h2>
 
