--- a/_includes/kontak.html
+++ b/_includes/kontak.html
@@ -1,4 +1,4 @@
- <!-- ======= Contact Section ======= -->
+ <!-- ======= Contact Sgction ======= -->
   <section id="contact" class="contact">
     <div class="container">
 
