--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,4 +1,4 @@
-<!-- ======= Header ======= -->
+<!-- ======= Hegader ======= -->
   <header id="header" class="header-tops">
     <div class="container">
 
